--- a/local_rmd_nbooks/m2_QC_prelim_stage_anno.Rmd
+++ b/local_rmd_nbooks/m2_QC_prelim_stage_anno.Rmd
@@ -44,6 +44,7 @@ suppressPackageStartupMessages({
   library(scmap)
   library(ggsankey)
   library(findPC)
+  library(BPCells)
   
   conflict_prefer("select", "dplyr")
   conflict_prefer("filter", "dplyr")
@@ -203,12 +204,13 @@ for (i in 1:length(sample_name)) {
   
   ## Create new directories
   system(paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/', sample_name[i], '/Pf/outs'))
-  system(paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/processed/', sample_name[i]))
+  system(paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/processed/Pf/', sample_name[i]))
+  system(paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/processed/Pf/', sample_name[i], '/bpcells'))
   
   ##Transfers
   ##souporcell genotyping files
   system(
-    paste0('rsync --delete -av --exclude="*h5" --exclude="*bam*" --exclude="metrics_summary.csv" jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/', source_irods[i], '/outs/* /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/', sample_name[i], '/Pf/outs/')
+    paste0('rsync --delete -av --exclude="molecule_info.h5" --exclude="raw_feature_bc_matrix.h5" --exclude="*bam*" --exclude="metrics_summary.csv" jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/', source_irods[i], '/outs/* /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/', sample_name[i], '/Pf/outs/')
     )
   
   ##metadata and seurat object files
@@ -221,25 +223,86 @@ for (i in 1:length(sample_name)) {
 
 ```
 
+
 ```{r, results='hide'}
 # list.files("data/processed/", pattern = "clusters.tsv", full.names = T, recursive = T, include.dirs = T)
-list.files("data/raw/", pattern = "filtered_feature_bc_matrix$", full.names = T, recursive = T, include.dirs = T)%>% 
+list.files("data/raw/", pattern = "filtered_feature_bc_matrix$", full.names = T, recursive = T, include.dirs = T) %>% 
   set_names(nm = (str_remove_all(.,'data/raw//|/Pf.*') %>% str_replace(., '/', '_')))
 ```
 
 
-```{r, message=F, warning=F}
+```{r}
 ##Read filtered cellranger matrices into R
-all_msc <- list.files("data/raw/", pattern = "filtered_feature_bc_matrix$", full.names = T, recursive = T, include.dirs = T)%>% 
-  set_names(nm = (str_remove_all(.,'data/raw//|/Pf.*') %>% str_replace(., '/', '_'))) %>% 
-  # str_sort(., numeric = T) %>%
+list.files("data/raw/", pattern = "filtered_feature_bc_matrix.h5$", full.names = T, recursive = T, include.dirs = T)
+```
+
+```{r}
+##Read filtered cellranger matrices into R
+# all_msc <- list.files("data/raw/", pattern = "filtered_feature_bc_matrix_h5", full.names = T, recursive = T, include.dirs = T)%>% 
+#   set_names(nm = (str_remove_all(.,'data/raw//|/Pf.*') %>% str_replace(., '/', '_'))) %>% 
+#   # str_sort(., numeric = T) %>%
+#   .[sample_name] %>%
+#   map(~Read10X(.,gene.column = 1)) %>% 
+#   imap(., ~ CreateSeuratObject(.x, project = paste0(.y, ".mrna"))) 
+```
+
+
+```{r, message=F, warning=F}
+##Write BPcells matrices
+list.files("data/raw/", pattern = "filtered_feature_bc_matrix.h5$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/raw//|/Pf.*'))) %>% 
   .[sample_name] %>%
-  map(~Read10X(.,gene.column = 1)) %>% 
-  imap(., ~ CreateSeuratObject(.x, project = paste0(.y, ".mrna"))) 
+  map(~open_matrix_10x_hdf5(path = .)) %>% 
+  imap(., ~write_matrix_dir(mat = .x, dir = paste0('data/processed/Pf/', .y, '/bpcells/counts_mtx'), overwrite = T))
+```
+
+
+```{r, message=F, warning=F}
+##Read BPcells matrices
+all_msc <- list.files("data/processed/", pattern = "counts_mtx$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/processed//Pf/|/bpcells.*'))) %>% 
+  .[sample_name] %>%
+  map(~open_matrix_dir(dir = .)) %>% 
+  imap(., ~CreateSeuratObject(counts = .x, project = paste0(.y, ".mrna"))) 
 ```
 
 
 
+```{r, message=F, warning=F}
+# file.dir <- "/brahms/hartmana/vignette_data/h5ad_files/"
+# files.set <- c("ahern_pbmc.h5ad", "jin_pbmc.h5ad", "yoshida_pbmc.h5ad")
+# 
+# # Loop through h5ad files and output BPCells matrices on-disk
+# data.list <- c()
+# metadata.list <- c()
+# 
+# for (i in 1:length(files.set)) {
+#   path <- paste0(file.dir, files.set[i])
+#   data <- open_matrix_anndata_hdf5(path)
+#    write_matrix_dir(
+#      mat = data,
+#      dir = paste0(gsub(".h5ad", "", path), "_BP")
+#    )
+#   # Load in BP matrices
+#   mat <- open_matrix_dir(dir = paste0(gsub(".h5ad", "", path), "_BP"))
+#   mat <- Azimuth:::ConvertEnsembleToSymbol(mat = mat, species = "human")
+#   # Get metadata
+#   metadata.list[[i]] <- LoadH5ADobs(path = path)
+#   data.list[[i]] <- mat
+# }
+# # Name layers
+# names(data.list) <- c("ahern", "jin", "yoshida")
+# 
+# # Add Metadata
+# for (i in 1:length(metadata.list)) {
+#   metadata.list[[i]]$publication <- names(data.list)[i]
+# }
+# metadata.list <- lapply(metadata.list, function(x) {
+#   x <- x[, c("publication", "sex", "cell_type", "donor_id", "disease")]
+#   return(x)
+# })
+# metadata <- Reduce(rbind, metadata.list)
+```
 
 Check clustering of cells before filtering out by mt.percent
 ```{r, warning=FALSE, message=FALSE}
