--- a/local_rmd_nbooks/m2_QC_prelim_stage_anno.Rmd
+++ b/local_rmd_nbooks/m2_QC_prelim_stage_anno.Rmd
@@ -71,7 +71,7 @@ knitr::opts_knit$set(root.dir = '/Users/jr35/Google Drive/My Drive/PHD_documents
 ##Strain cluster colours
 stg_lvls = c("Early ring", "Late ring", "Early trophozoite","Late trophozoite" , "Early schizont", "Late schizont",  "Gametocyte (developing)", "Female (HE)", "Female", "Female (LE)",  "Gametocyte (female)", "Male (HE)", "Male", "Male (LE)", "Gametocyte (male)", "Asexual", "Unassigned", "Failed QC", "Not assigned")
 
-stg_refnd_lvls = c("Early ring", "Late ring", "Early trophozoite", "Late trophozoite", "Early schizont", "Late schizont", "Gametocyte (committed)", "Gametocyte (developing)", "Gametocyte (branching)", "Female (HE)", "Female", "Female (LE)", "Gametocyte (female)", "Gametocyte (early female)", "Gametocyte (late female)", "Gametocyte (male)", "Male (HE)", "Male", "Male (LE)", "Gametocyte (early male)", "Gametocyte (late male)", "Asexual", "Unassigned", "Failed qc", "Not assigned", "Atlas")
+stg_refnd_lvls = c("Early ring", "Late ring", "Early trophozoite", "Late trophozoite", "Early schizont", "Late schizont", "Gametocyte (committed)", "Gametocyte (developing)", "Gametocyte (branching)", "Female (HE)", "Female", "Female (LE)", "Gametocyte (female)", "Gametocyte (early female)", "Gametocyte (late female)", "Gametocyte (male)", "Male (HE)", "Male", "Male (LE)", "Gametocyte (early male)", "Gametocyte (late male)", "Asexual", "early trophozoite", "late ring", "late trophozoite", "early schizont", "early ring", "late schizont", "gametocyte (developing)", "gametocyte (female)", "gametocyte (male)", "Unassigned", "Failed qc", "Not assigned", "Atlas")
 
 stg_refnd_lvls2 = c('Early ring','Late ring','Early trophozoite','Late trophozoite','Early schizont','Late schizont', "Gametocyte (committed)","Gametocyte (developing)","Gametocyte (branching)", "Female (HE)", "Female", "Female (LE)", "Gametocyte (early female)","Gametocyte (late female)", "Male (HE)", "Male", "Male (LE)", "Gametocyte (early male)","Gametocyte (late male)", "Asexual", "Unassigned", "Failed QC", "Not assigned") #%>% str_to_sentence(.)
 
@@ -102,13 +102,13 @@ sp_colors <- c('Early ring'='#D1EC9F',
 
 sp_fld_colors <- c('Late ring'= '#78C679',#met.brewer('Java')[2],
                    'Early trophozoite'='#FEEEAA',#met.brewer('Java')[3],
-                   'Female (LE)'= met.brewer('Ingres')[5],
+                   'Female LE'= met.brewer('Ingres')[5],
                    'Female'= '#551A8B', #met.brewer('Ingres')[7],
                    # 'Female (HE)'= '#551A8B', #met.brewer('Ingres')[7],
                    # 'Male (LE)'=met.brewer('Nizami')[6],
                    # 'Male (HE)'=met.brewer('Nizami')[8],
                    # 'Gametocyte (male)'=met.brewer('Austria')[5],
-                   'Male (LE)'=met.brewer('Ingres')[7],#'#a2e19e',
+                   'Male LE'=met.brewer('Ingres')[7],#'#a2e19e',
                    'Male'= 'mediumpurple',#'#039911',
                    ## 'Male (HE)'= 'mediumpurple',#'#039911',
                    'Gametocyte (male)'='#3DED97',
@@ -126,7 +126,8 @@ sp_fld_colors <- c('Late ring'= '#78C679',#met.brewer('Java')[2],
                    'early female' = '#749E89',
                    'late female'= '#4E6D58',
                     "Asexual" = "#FBC81D",
-                   NULL = 'lightgrey'
+                   NULL = 'lightgrey',
+                   'Field unlabelled'='#D2C1DC'
 )
 
 cluster_cols <- brewer.pal(7, name = 'Set2') %>% set_names(as.character(c(0:6)))
@@ -174,7 +175,7 @@ write_csv(irods_id_sk21_mdata_cln, "data/raw/irods_id_sk21_mdata_cln.csv")
 
 ```{r}
 system(
-    paste0('rsync -av /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/irods_id_sk21_mdata_cln.csv jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/raw/irods_id_sk21_mdata_cln.csv')
+    paste0('rsync -av /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/irods_id_sk21_mdata_cln.csv jr35@farm22:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/raw/irods_id_sk21_mdata_cln.csv')
     )
 ```
   
@@ -210,12 +211,12 @@ for (i in 1:length(sample_name)) {
   ##Transfers
   ##souporcell genotyping files
   system(
-    paste0('rsync --delete -av --exclude="molecule_info.h5" --exclude="raw_feature_bc_matrix.h5" --exclude="*bam*" --exclude="metrics_summary.csv" jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/', source_irods[i], '/outs/* /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/', sample_name[i], '/Pf/outs/')
+    paste0('rsync --delete -av --exclude="molecule_info.h5" --exclude="raw_feature_bc_matrix.h5" --exclude="*bam*" --exclude="metrics_summary.csv" jr35@farm22:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/', source_irods[i], '/outs/* /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/', sample_name[i], '/Pf/outs/')
     )
   
   ##metadata and seurat object files
   # system(
-  #   paste0('rsync -av --include="msc_filt_w_dblts_scmap_metadata.RDS" --include="msc_filt_w_dblts_scmap.RDS" --exclude="*" jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/rdata/Pf/', source_irods[i], '/* /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/', sample_name[i], '/')
+  #   paste0('rsync -av --include="msc_filt_w_dblts_scmap_metadata.RDS" --include="msc_filt_w_dblts_scmap.RDS" --exclude="*" jr35@farm22:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/rdata/Pf/', source_irods[i], '/* /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/', sample_name[i], '/')
   # )
   
 }
@@ -361,7 +362,7 @@ map(all_msc, ~DimPlot(.x, dims = c(1,2), label = T))
 ### Preprocessing references
 
 #### msc_combi reference dataset
-```{r}
+```{r, eval=FALSE}
 ##Read MCA V3 blood stage reference dataset
 # msc_combi <- readRDS("../sc_velo/data/raw/RoadtoUMAP/pseudotime/raw_combined_cut_0.4.RDS")
 # msc_combi <- readRDS("../Mali/data/raw/mca_v3_ref/raw_combined_cut_0.4_nodoublets_stagenew.RDS")
@@ -372,7 +373,7 @@ DefaultAssay(msc_combi) <- "RNA"
 msc_combi@meta.data$stageHL_ref_asx <- ifelse(msc_combi@meta.data$stageHL_ref %in% c("Early trophozoite", "Late ring"), "Asexual", msc_combi@meta.data$stageHL_ref)
 ```
 
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, eval=FALSE}
 ##Convert to reference to sce
 msc_combi.sce <- as.SingleCellExperiment(msc_combi)
 
@@ -387,6 +388,52 @@ msc_combi.sce <- selectFeatures(msc_combi.sce, suppress_plot = T)
 ##Cell indexing
 set.seed(155)
 msc_combi.sce <- indexCell(msc_combi.sce)
+```
+
+
+```{r, eval=T}
+## transfer integrated object from sunil farm to local
+system('rsync -av jr35@farm22:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/rdata/for_scmap/v3labmscs.ref.seur.RDS /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/Pf/')
+system('rsync -av jr35@farm22:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/rdata/for_scmap/v3labmscs.ref.sce.RDS /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/Pf/')
+
+```
+
+#### full msc_atlas reference dataset
+```{r}
+##Read MCA V3 + field blood stage reference dataset
+v3labmscs.ref.sce <- readRDS("../Mali2/data/raw/Pf/v3labmscs.ref.sce.RDS")
+
+```
+
+
+
+```{r, message=FALSE, warning=FALSE}
+##Collapse asexual stages into 1 "Asexual"
+v3labmscs.ref.sce@colData[,c("stageHL_ref", "stageHL_ref_asx")] <- colData(v3labmscs.ref.sce) %>% 
+  data.frame() %>% 
+  mutate(stageHL_ref = case_when(str_detect(orig.ident, "msc") & stageLR == "late ring" ~ "Late ring", 
+                                 str_detect(orig.ident, "msc") & stageLR == "early trophozoite" ~ "Early trophozoite", 
+                                 str_detect(orig.ident, "msc") & stageLR == "gametocyte (female) LE" ~ "Female LE", 
+                                 str_detect(orig.ident, "msc") & stageLR == "gametocyte (female)" ~ "Female", 
+                                 str_detect(orig.ident, "msc") & stageLR == "gametocyte (male) LE" ~ "Male LE", 
+                                 str_detect(orig.ident, "msc") & stageLR == "gametocyte (male)" ~ "Male", T ~ stageLR)) %>% 
+  mutate(stageHL_ref_asx = case_when(stageHL_ref %in% c("Early trophozoite", "Late ring") ~ "Asexual", T ~ stageHL_ref)) %>%
+  select(stageHL_ref, stageHL_ref_asx)
+
+```
+
+
+```{r, message=FALSE, warning=FALSE}
+scater::plotReducedDim(v3labmscs.ref.sce, dimred = "PCA", colour_by = "stageHL_ref_asx", ncomponents = c(2,3))
+```
+
+```{r, message=FALSE, warning=FALSE}
+##scmap feature selection
+v3labmscs.ref.sce <- selectFeatures(v3labmscs.ref.sce, suppress_plot = T)
+
+##Cell indexing
+set.seed(155)
+v3labmscs.ref.sce <- indexCell(v3labmscs.ref.sce)
 ```
 
 
@@ -418,7 +465,9 @@ sce_obj_creatn <- function(sce_obj, seu_obj){
 
 
   }
+  
   return(sce_obj)
+  
 }
 
 
@@ -436,7 +485,8 @@ transferring labels from  reference datasets
 ##Projection
 all_msc_jc <- all_msc_sce %>%
   map(. %>% scmapCell(.,list(
-    Stage_MSC = metadata(msc_combi.sce)$scmap_cell_index
+    # Stage_MSC = metadata(msc_combi.sce)$scmap_cell_index
+    Stage_MSC = metadata(v3labmscs.ref.sce)$scmap_cell_index
   )
   )
   )
@@ -452,7 +502,8 @@ Assigning stage labels only when the top 3 most closest reference cells to a que
 ##Assigning stage labels using thresholds
 all_msc_lbls <- all_msc_jc %>%
   map(. %>% scmapCell2Cluster(.,list(
-    as.character(SummarizedExperiment::colData(msc_combi.sce)$stageHL_ref)
+    # as.character(SummarizedExperiment::colData(msc_combi.sce)$stageHL_ref)
+    as.character(SummarizedExperiment::colData(v3labmscs.ref.sce)$stageHL_ref)
   ),w = 3, threshold = 0.5)
   )
 ```
@@ -476,7 +527,8 @@ sc_topv3_cells_sims_all <- list(all_msc_jc) %>%
                     rename_all(., ~str_replace(., 'X', 'msc_ref_cells')) %>% 
                     rownames_to_column('bcode'),
                   by = 'bcode') %>% 
-        mutate(across(starts_with('msc_ref_cells'), ~colnames(msc_combi.sce)[.]))
+        # mutate(across(starts_with('msc_ref_cells'), ~colnames(msc_combi.sce)[.]))
+        mutate(across(starts_with('msc_ref_cells'), ~colnames(v3labmscs.ref.sce)[.]))
     })
 
 # saveRDS(sc_topv3_cells_sims_all, 'data/processed/DB52e_star/sc_topv3_cells_sims_all.RDS')
@@ -498,7 +550,8 @@ sc_topv3_cells_sims_all <- list(all_msc_jc) %>%
 Adding annotations to MSC query datasets
 ```{r}
 ## Adding annotations to query cells
-stg_anots <- msc_combi@meta.data[,c('stageHL_ref'), drop=F]
+# stg_anots <- msc_combi@meta.data[,c('stageHL_ref'), drop=F]
+stg_anots <- v3labmscs.ref.sce@colData[,c('stageHL_ref'), drop=F] %>% data.frame()
 
 ## scmap merge the top labels and similarity scores
 top_stg_sim <- map(sc_topv3_cells_sims_all,
@@ -545,15 +598,21 @@ map(all_msc_anotd_preQC, ~..1@meta.data %>% dplyr::count(Stage_MSC, stage_lab1))
 ```{r}
 ##Modify the stage labels for MSC14
 # all_msc_anotd_preQC[[4]] <- all_msc_anotd_preQC[[4]]@meta.data %>%
-all_msc_anotd_preQC <- pmap(list(all_msc_anotd_preQC, rep(0.4,length(sample_name)), c(rep('Late ring|Early trophozoite', length(sample_name)))), ~{
+all_msc_anotd_preQC <- pmap(list(all_msc_anotd_preQC, rep(0.4,length(sample_name)), c(rep('Late ring|Early trophozoite|late ring|early trophozoite', length(sample_name)))), ~{
   ..1@meta.data %>%
   mutate(across(Stage_MSC, as.character)) %>%
   # mutate(Stage_MSC = Stage_MSC) %>%
   mutate(StagePrelim = case_when(
     is.na(Stage_MSC) & sim_lab1 > 0.35 & str_detect(stage_lab1, ..3) & str_detect(stage_lab2, ..3) & str_detect(stage_lab3, ..3) ~ stage_lab1,
-    is.na(Stage_MSC) & sim_lab1 > ..2 & str_detect(stage_lab1, 'Male') & str_detect(stage_lab2, 'Male') & str_detect(stage_lab3, 'Male') ~ stage_lab1,
-    is.na(Stage_MSC) & sim_lab1 > ..2 & str_detect(stage_lab1, 'Female') & str_detect(stage_lab2, 'Female') & str_detect(stage_lab3, 'Female') ~ stage_lab1,
+    is.na(Stage_MSC) & sim_lab1 > ..2 & str_detect(stage_lab1, 'Male|male') & str_detect(stage_lab2, 'Male|male') & str_detect(stage_lab3, 'Male|male') ~ stage_lab1,
+    is.na(Stage_MSC) & sim_lab1 > ..2 & str_detect(stage_lab1, 'Female|female') & str_detect(stage_lab2, 'Female|female') & str_detect(stage_lab3, 'Female|female') ~ stage_lab1,
     TRUE ~ Stage_MSC)#,
+    # across(StagePrelim, str_to_sentence)
+  )%>%
+  mutate(StagePrelim = case_when(
+    str_detect(StagePrelim, "late|early|gametocyte") ~ str_to_sentence(StagePrelim),
+    is.na(StagePrelim) ~ "Field unlabelled",
+    TRUE ~ StagePrelim)#,
     # across(StagePrelim, str_to_sentence)
   ) %>%
   dplyr::select(StagePrelim) %>%
@@ -566,7 +625,8 @@ all_msc_anotd_preQC <- pmap(list(all_msc_anotd_preQC, rep(0.4,length(sample_name
 
 ```{r, warning=FALSE, message=FALSE}
 
-map(all_msc_anotd_preQC, ~.x@meta.data %>% dplyr::count(Stage_MSC, StagePrelim, stage_lab1))
+# map(all_msc_anotd_preQC, ~.x@meta.data %>% dplyr::count(Stage_MSC, StagePrelim, stage_lab1))
+map(all_msc_anotd_preQC, ~.x@meta.data %>% dplyr::count(StagePrelim))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
@@ -599,14 +659,16 @@ print(cell_qc_plot)
 
 Umap with stage labels in legend
 
-```{r, fig.width = 7, fig.height = 5}
+```{r, fig.width = 7, fig.height = 5, eval=T}
 trunc_axis <- ggh4x::guide_axis_truncated(
   trunc_lower = unit(0, "npc"),
   trunc_upper = unit(2.2, "cm")
 )
 
 # Assign the female High_low stage of the projected cell to the nearest cell in the reference dataset
-msc_qcd_anotd_mali_mapped14HL = rep(list(rep("Not assigned", ncol(msc_combi.sce))), length(all_msc_jc))
+# msc_qcd_anotd_mali_mapped14HL = rep(list(rep("Not assigned", ncol(msc_combi.sce))), length(all_msc_jc))
+msc_qcd_anotd_mali_mapped14HL = rep(list(rep("Not assigned", ncol(v3labmscs.ref.sce))), length(all_msc_jc))
+
 
 for (i in 1:length(msc_qcd_anotd_mali_mapped14HL)){
   msc_qcd_anotd_mali_mapped14HL[[i]][all_msc_jc[[i]]$Stage_MSC$cells[1,]] <- all_msc_anotd_preQC[[i]]$StagePrelim
@@ -615,7 +677,9 @@ for (i in 1:length(msc_qcd_anotd_mali_mapped14HL)){
 
 for (i in 1:length(all_msc_anotd_preQC)){
   msc_qcd_anotd_mali_mapped14HL[[i]][all_msc_jc[[i]]$Stage_MSC$cells[1,]] <- all_msc_anotd_preQC[[i]]$StagePrelim
-  msc_combi@meta.data[, paste0("stage_", names(all_msc_anotd_preQC[i]))] <-  droplevels(factor(msc_qcd_anotd_mali_mapped14HL[[i]], levels = stg_refnd_lvls))
+  # msc_combi@meta.data[, paste0("stage_", names(all_msc_anotd_preQC[i]))] <-  droplevels(factor(msc_qcd_anotd_mali_mapped14HL[[i]], levels = stg_refnd_lvls))
+  v3labmscs.ref.sce@colData[, paste0("stage_", names(all_msc_anotd_preQC[i]))] <-  droplevels(factor(msc_qcd_anotd_mali_mapped14HL[[i]], levels = stg_refnd_lvls))
+
 }
 
 labs_order <- c('Late ring', 'Early trophozoite','Female (HE)',  'Male (HE)', 'Female (LE)', 'Male (LE)','Gametocyte (developing)', 'Gametocyte (male)','Gametocyte (female)',  'Atlas')
@@ -633,15 +697,24 @@ umap_theme <- theme(legend.position = 'right',
 
 
 # Idents(msc_combi) <- 'MSC14_V3'
-m14_scmap_mca_umap <- map(names(all_msc_anotd_preQC), ~DimPlot(msc_combi, reduction = "umap",  group.by = paste0("stage_",.x), pt.size = 1, dims = c(2,3), 
-        order = labs_order) +
-  scale_color_manual(breaks=labs_order, values = sp_fld_colors[labs_order], labels = str_wrap(labs_order, 10))+ umap_theme+
+# m14_scmap_mca_umap <- map(names(all_msc_anotd_preQC), ~DimPlot(msc_combi, reduction = "umap",  group.by = paste0("stage_",.x), pt.size = 1, dims = c(2,3), 
+#         order = labs_order) +
+m14_scmap_mca_umap <- map(names(all_msc_anotd_preQC), ~{
+  cbind(reducedDims(v3labmscs.ref.sce)$UMAP, colData(v3labmscs.ref.sce)[, c("stageHL_ref", paste0("stage_",.x)), drop=F]) %>% 
+    data.frame() %>% 
+    mutate(od_stg = factor(!!rlang::sym(paste0("stage_",.x)), levels = rev(stg_refnd_lvls))) %>%
+    arrange(od_stg) %>%
+    ggplot(aes(y = UMAP_2, x=UMAP_3, color = od_stg)) +
+  geom_point() +
+  # scale_color_manual(breaks=labs_order, values = sp_fld_colors, labels = str_wrap(labs_order, 10))+
+  scale_color_manual(values = sp_fld_colors)+
+    umap_theme+
   guides(color = guide_legend(title = 'Stage',override.aes = list(size = 4), ncol = 1, byrow = TRUE),
          x= trunc_axis,
          y= trunc_axis)+
   scale_x_continuous(breaks = NULL) +
   scale_y_continuous(breaks = NULL)
-)
+})
 
 ##Save image for manuscript fig 4
 # saveRDS(m14_scmap_mca_umap, 'plots/fig4/m14_scmap_mca_umap')
@@ -652,7 +725,7 @@ m14_scmap_mca_umap
 ```
 
 Umap with stage labels inside
-```{r, fig.width = 7, fig.height = 5}
+```{r, fig.width = 7, fig.height = 5, eval=F}
 
 m14_scmap_mca_umap_labs_in <- map(names(all_msc_anotd_preQC), ~DimPlot(msc_combi, reduction = "umap",  group.by = paste0("stage_",.x), pt.size = 1, dims = c(2,3), label = T, order = labs_order, repel = T, label.size = 5) +
   scale_color_manual(values = sp_fld_colors)+ 
